general candidate update profile working.

--- a/templates/candidate2/candidate/profile/profile_menu.html
+++ b/templates/candidate2/candidate/profile/profile_menu.html
@@ -2,7 +2,7 @@
     <ul class="nav nav-tabs overflow-auto flex-nowrap text-nowrap" id="subAnalytics" role="tablist">
         <li class="nav-item position-relative me-7 mb-3" role="presentation">
             <a class="nav-link p-0 active fs-5"
-               href="/general"
+               href="/candidate2/general"
                tabindex="-1">General</a>
         </li>
         <li class="nav-item position-relative me-7 mb-3" role="presentation">
