--- a/templates/candidate2/candidate/profile/general.html
+++ b/templates/candidate2/candidate/profile/general.html
@@ -24,90 +24,79 @@
                 <h1 class="page-header-title">Candidate Profile</h1>
             </div>
             <div class="card">
-                <form method="post" action="/general" enctype="multipart/form-data">
+                <form method="post" action="{{ url_for('general') }}" enctype="multipart/form-data">
+                    <small class="form-error">
+                        {% with messages = get_flashed_messages(with_categories=true) %} {% if
+                        messages %} {% for category, message in messages %}
+                        <div
+                          class="alert alert-{{ 'success' if category == 'success' else 'danger' }}"
+                          role="alert"
+                        >
+                          {{ message }}
+                        </div>
+                        {% endfor %} {% endif %} {% endwith %}
+                      </small>
                     <div class="card-body">
+                        <p>{{ profile }}</p>
                         <div class="row">
                             <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
                                 <label for="first_name" class="form-label">First Name:</label>
-                                <input type="text" name="first_name" value="" class="form-control">
+                                <input type="text" name="cand_fname" value="{{ profile.fname }}" class="form-control">
                             </div>
                             <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="last_name" class="form-label">Last Name:</label>
-                                <input type="text" name="last_name" value="" class="form-control">
+                                <label for="cand_surname" class="form-label">Sur Name:</label>
+                                <input type="text" name="cand_surname" value="{{ profile.surname }}" class="form-control">
                             </div>
                             <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="email" class="form-label">Email:</label>
-                                <input type="email" name="email" value="" class="form-control">
+                                <label for="cand_lname" class="form-label">Last Name:</label>
+                                <input type="text" name="cand_lname" value="{{ profile.lname }}" class="form-control">
                             </div>
                             <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="phone" class="form-label">Phone:</label>
-                                <input type="tel" name="phone" value="" class="form-control">
+                                <label for="cand_title" class="form-label">Professional Title:</label>
+                                <input type="text" name="cand_title" value="{{ profile.professional_title }}" class="form-control">
+                            </div>
+                           
+                            <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
+                                <label for="cand_phone" class="form-label">Phone:</label>
+                                <input type="tel" name="cand_phone" value="{{ profile.phone }}" class="form-control">
                             </div>
                             <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="birth_date" class="form-label">Birth Date:</label>
-                                <input type="text" id="birthDate" name="birth_date" value="" class="form-control" placeholder="YYYY-MM-DD" min="0" max="15" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
+                                <label for="cand_national_id_no" class="form-label">National Id:</label>
+                                <input type="number" name="cand_national_id_no" value="{{ profile.national_id_no }}" class="form-control">
                             </div>
                             <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="career_level" class="form-label">Career Level:</label>
-                                <select name="career_level_id" id="careerLevelId" class="form-select">
-                                    
-                                        <option value="" >Certificate</option>
+                                <label for="cand_dob" class="form-label">Birth Date:</label>
+                                <input type="date" id="cand_dob" name="cand_dob" value="{{ profile.dob }}" class="form-control" placeholder="YYYY-MM-DD" min="0" max="15" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
+                            </div>
+                            <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
+                                <label for="cand_gender" class="form-label">Gender:</label>
+                                <select name="cand_gender" id="careerLevelId"  class="form-select">
+                                        <option value="male" >Male</option>
+                                        <option value="female" >Female</option>
                                  
                                 </select>
                             </div>
                             <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="industry" class="form-label">Industry:</label>
-                                <select name="industry_id" id="industryId" class="form-select">
-                                    
-                                        <option value="" >Information Technology</option>
-                                   
-                                </select>
+                                <label for="cand_address" class="form-label">Address:</label>
+                                <textarea name="cand_address" class="form-control">{{ profile.address }}</textarea>
                             </div>
                             <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="job_type" class="form-label">Job Type:</label>
-                                <select name="job_type_id" id="jobTypeId" class="form-select">
-                                    
-                                        <option value="" >Full Time</option>
-                                    
-                                </select>
+                                <label for="cand_bio" class="form-label">Bio:</label>
+                                <textarea name="cand_bio" class="form-control">{{ profile.bio }}</textarea>
                             </div>
-                            <div class="col-sm-6 mb-5">
-                                <label for="salary_currency" class="form-label">Salary Currency:</label>
-                                <select name="salary_currency" class="form-select">
-                                    
-                                        <option value="" >KES</option>
-                                    
-                                </select>
-                            </div>
-                            <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="expected_salary" class="form-label">Expected Salary:</label>
-                                <input type="text" name="expected_salary" value="" class="form-control" onkeypress="return event.charCode >= 48 && event.charCode <= 57" min="0" max="15">
-                            </div>
-                            <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="facebook_url" class="form-label">Facebook URL:</label>
-                                <input type="text" name="facebook_url" value="" class="form-control" placeholder="Facebook URL">
-                            </div>
-                            <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="twitter_url" class="form-label">Twitter URL:</label>
-                                <input type="text" name="twitter_url" value="" class="form-control" placeholder="Twitter URL">
-                            </div>
-                            <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="linkedin_url" class="form-label">LinkedIn URL:</label>
-                                <input type="text" name="linkedin_url" value="" class="form-control" placeholder="LinkedIn URL">
-                            </div>
-                            <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="google_plus_url" class="form-label">Google Plus URL:</label>
-                                <input type="text" name="google_plus_url" value="" class="form-control" placeholder="Google Plus URL">
-                            </div>
-                            <div class="col-xl-6 col-md-6 col-sm-12 mb-5">
-                                <label for="pinterest_url" class="form-label">Pinterest URL:</label>
-                                <input type="text" name="pinterest_url" value="" class="form-control" placeholder="Pinterest URL">
-                            </div>
-                            <div class="d-flex justify-content-end">
-                                <button type="submit" class="btn btn-primary">Save</button>
-                            </div>
+                            
+                            
+                            
                         </div>
+                        <div class="update-cand-form-row col-xl-4 col-md-4 col-sm-6 mb-5">
+                        
+                            <button class="btn btn-outline-primary mt-2" type="submit">
+                                     Update
+                            </button>
+                                 
+                              </div>
                     </div>
+                    
                 </form>
             </div>
         </div>
